--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,19 @@
   <description>Version of the Graph Algorithms using Standard Neo4j implementation for comparison with my AvocadoDB implementations.</description>
   <dependencies>
   	<dependency>
+	<groupId>org.neo4j</groupId>
+	<artifactId>neo4j-advanced</artifactId>
+	<version>1.8.M06</version>
+</dependency>
+            <!-- <dependency>
   		<groupId>org.neo4j</groupId>
   		<artifactId>neo4j-graph-algo</artifactId>
   		<version>1.7</version>
   	</dependency>
+  	<dependency>
+		<groupId>org.neo4j</groupId>
+		<artifactId>neo4j-index</artifactId>
+		<version>1.3-1.3.M01</version>
+	</dependency> -->
   </dependencies>
 </project>
